--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>xpath</artifactId>
+			<version>0.0.27</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.17.0</version>
