Added progress window on upload file

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.webjars.npm</groupId>
 			<artifactId>xpath</artifactId>
 			<version>0.0.27</version>
@@ -60,7 +65,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+ </dependencies>
 
 	<build>
 		<plugins>
